2011-01-26  Dan Bernstein  <mitz@apple.com>

        Reviewed by Dave Hyatt.

        <rdar://problem/8446709> Allow inter-ideograph justification for CJK
        https://bugs.webkit.org/show_bug.cgi?id=53184

        * src/WebTextRun.cpp:
        (WebKit::WebTextRun::operator WebCore::TextRun): Added a TrailingExpansionBehavior parameter to the
        RenderText constructor.

2011-01-26  Kenneth Russell  <kbr@google.com>

        Reviewed by James Robinson.

        Fix multisampling support in DrawingBuffer
        https://bugs.webkit.org/show_bug.cgi?id=53154

        Plumbed GL_ANGLE_framebuffer_multisample and
        GL_ANGLE_framebuffer_blit (exposed as the unified extension
        GL_CHROMIUM_framebuffer_multisample) through WebGraphicsContext3D.

        * public/WebGraphicsContext3D.h:
        * src/Extensions3DChromium.cpp:
        (WebCore::Extensions3DChromium::blitFramebuffer):
        (WebCore::Extensions3DChromium::renderbufferStorageMultisample):
        * src/GraphicsContext3DChromium.cpp:
        (WebCore::GraphicsContext3DInternal::supportsExtension):
        (WebCore::GraphicsContext3DInternal::ensureExtensionEnabled):
        * src/GraphicsContext3DInternal.h:

2011-01-26  Tony Chang  <tony@chromium.org>

        Unreviewed.

        [chromium] revert r68310 because of race conditions detected by tsans
        https://bugs.webkit.org/show_bug.cgi?id=53185

        * DEPS: Roll chromium to 72673 to pick up sqlite revert.

2011-01-26  James Robinson  <jamesr@chromium.org>

        Reviewed by Nate Chapin.

        Add a DOMTimeStamp parameter to the requestAnimationFrame callback
        https://bugs.webkit.org/show_bug.cgi?id=53142

        Provides a timestamp to use for imperative animation callbacks.  In this patch the timestamp is
        just the current time at the start of the callback invocation algorithm.  In the future we
        could enhance this to try to take the compositing delay into effect to try to synchronize